# utils

./: .gitignore  CMakeLists.txt
include/: macro.h  type.h
ring/: Makefile  main.c  ring.c  ring.h
test/: test_ring.c  test_ring_mpsc.c  test_ring_spmc.c  test_spsc_ring.c
